--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <title></title>
     </head>
     <body>
-        <h1>Hello World ye kara mene change ab me ye buttons se commit and push karunga </h1>
+        <h1>This will be the second commit</h1>
+        <p>and now since we made a change to first well commit with a message and then push it</p>
 
     </body>
 </html>
