--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <body>
         <h1>This will be the second commit</h1>
         <p>and now since we made a change to first well commit with a message and then push it</p>
-
+<ul>
+    <li>this is first keynote</li>
+    <li>this is the second keynote</li>
+</ul>
     </body>
 </html>
